[package]
name = "yamlpath"
version = "0.14.0"
description = "Format-preserving YAML feature extraction"
authors = ["William Woodruff <william@yossarian.net>"]
repository = "https://github.com/woodruffw/yamlpath"
readme = "../README.md"
keywords = ["yaml"]
edition = "2021"
license = "MIT"

[dependencies]
thiserror = "2.0.9"
tree-sitter = "0.24.5"
tree-sitter-yaml = "0.7.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
