[package]
name = "yamlpath"
version = "0.15.0"
description = "Format-preserving YAML feature extraction"
authors = ["William Woodruff <william@yossarian.net>"]
repository = "https://github.com/woodruffw/yamlpath"
readme = "../README.md"
keywords = ["yaml"]
edition = "2024"
license = "MIT"

[dependencies]
thiserror = "2"
tree-sitter = "0.25.1"
tree-sitter-yaml = "0.7.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
