[package]
name = "yamlpath"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
tree-sitter = "0.25.3"
tree-sitter-yaml = "0.7.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
