[package]
name = "yp"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
nom = "8"
yamlpath = { version = "*", path = "../yamlpath" }
